--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </div>
     <footer>
-      <p class="copyright">&copy; Gana Teja Inti</p>
+      <p class="copyright">&copy; Naga Madhuri Tammineedi</p>
     </footer>
   </body>
 
